# SerialTool

./: .gitignore  CMakeLists.txt
src/: main.cpp  protocolparser.cpp  protocolparser.h  serialworker.cpp  serialworker.h
src/ui/: mainwindow.cpp  mainwindow.h  serialconfig.cpp  serialconfig.h  waveformwidget.cpp  waveformwidget.h
